assignment3/assignment3/target/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInteger()'", "'readFloat()'", "'readBoolean()'", 
                     "'readString()'", "'printInteger'", "'printFloat'", 
                     "'printBoolean'", "'printString'", "'super'", "'preventDefault'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "'.'", "';'", 
                     "','", "':'", "'array'", "'auto'", "'break'", "'boolean'", 
                     "'do'", "'else'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'void'", 
                     "'while'", "'out'", "'continue'", "'of'", "'inherit'", 
                     "'-'", "'+'", "'*'", "'/'", "'%'", "'::'", "'!'", "'&&'", 
                     "'||'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'='", "<INVALID>", "<INVALID>", "<INVALID>", "'true'", 
                     "'false'" ]

    symbolicNames = [ "<INVALID>", "ReadInteger", "ReadFloat", "ReadBoolean", 
                      "ReadString", "PrintInteger", "PrintFloat", "PrintBoolean", 
                      "PrintString", "Super", "PreventDefault", "LB", "RB", 
                      "LP", "RP", "LSB", "RSB", "DOT", "SEMI", "COMMA", 
                      "COLON", "ARRAY", "AUTO", "BREAK", "BOOLEAN", "DO", 
                      "ELSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "VOID", "WHILE", "OUT", "CONTINUE", 
                      "OF", "INHERIT", "SUB", "ADD", "MUL", "DIV", "MOD", 
                      "CONCATE", "NOT", "AND", "OR", "EQ", "NEQ", "LT", 
                      "GT", "LEQ", "GEQ", "ASSIGN", "INTLIT", "FLOATLIT", 
                      "BOOLIT", "TRUE", "FALSE", "STRINGLIT", "ID", "CMT", 
                      "BLOCKCMT", "WS", "ILLEGAL_ESCAPE", "UNCLOSED_STRING", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_vardecl_no_assign = 4
    RULE_idlist = 5
    RULE_vardecl_assign = 6
    RULE_varlist = 7
    RULE_vartype = 8
    RULE_funcdecl = 9
    RULE_funcprototype = 10
    RULE_functype = 11
    RULE_funcbody = 12
    RULE_paramlist = 13
    RULE_paramdecl = 14
    RULE_stmts = 15
    RULE_stmt_vardecl = 16
    RULE_stmt = 17
    RULE_specialfunc_r = 18
    RULE_specialfunc_c = 19
    RULE_assignstmt = 20
    RULE_lhs = 21
    RULE_ifstmt = 22
    RULE_forstmt = 23
    RULE_init_for = 24
    RULE_scalarvar = 25
    RULE_intexpr = 26
    RULE_condexpr = 27
    RULE_updateexpr = 28
    RULE_whilestmt = 29
    RULE_dowhilestmt = 30
    RULE_breakstmt = 31
    RULE_continuestmt = 32
    RULE_returnstmt = 33
    RULE_callstmt = 34
    RULE_blockstmt = 35
    RULE_arraytype = 36
    RULE_arraylit = 37
    RULE_arrayidx = 38
    RULE_intlist = 39
    RULE_exprlist = 40
    RULE_expr = 41
    RULE_exp1 = 42
    RULE_exp2 = 43
    RULE_exp3 = 44
    RULE_exp4 = 45
    RULE_exp5 = 46
    RULE_exp6 = 47
    RULE_exp = 48
    RULE_funccall = 49
    RULE_primtype = 50

    ruleNames =  [ "program", "decls", "decl", "vardecl", "vardecl_no_assign", 
                   "idlist", "vardecl_assign", "varlist", "vartype", "funcdecl", 
                   "funcprototype", "functype", "funcbody", "paramlist", 
                   "paramdecl", "stmts", "stmt_vardecl", "stmt", "specialfunc_r", 
                   "specialfunc_c", "assignstmt", "lhs", "ifstmt", "forstmt", 
                   "init_for", "scalarvar", "intexpr", "condexpr", "updateexpr", 
                   "whilestmt", "dowhilestmt", "breakstmt", "continuestmt", 
                   "returnstmt", "callstmt", "blockstmt", "arraytype", "arraylit", 
                   "arrayidx", "intlist", "exprlist", "expr", "exp1", "exp2", 
                   "exp3", "exp4", "exp5", "exp6", "exp", "funccall", "primtype" ]

    EOF = Token.EOF
    ReadInteger=1
    ReadFloat=2
    ReadBoolean=3
    ReadString=4
    PrintInteger=5
    PrintFloat=6
    PrintBoolean=7
    PrintString=8
    Super=9
    PreventDefault=10
    LB=11
    RB=12
    LP=13
    RP=14
    LSB=15
    RSB=16
    DOT=17
    SEMI=18
    COMMA=19
    COLON=20
    ARRAY=21
    AUTO=22
    BREAK=23
    BOOLEAN=24
    DO=25
    ELSE=26
    FLOAT=27
    FOR=28
    FUNCTION=29
    IF=30
    INTEGER=31
    RETURN=32
    STRING=33
    VOID=34
    WHILE=35
    OUT=36
    CONTINUE=37
    OF=38
    INHERIT=39
    SUB=40
    ADD=41
    MUL=42
    DIV=43
    MOD=44
    CONCATE=45
    NOT=46
    AND=47
    OR=48
    EQ=49
    NEQ=50
    LT=51
    GT=52
    LEQ=53
    GEQ=54
    ASSIGN=55
    INTLIT=56
    FLOATLIT=57
    BOOLIT=58
    TRUE=59
    FALSE=60
    STRINGLIT=61
    ID=62
    CMT=63
    BLOCKCMT=64
    WS=65
    ILLEGAL_ESCAPE=66
    UNCLOSED_STRING=67
    ERROR_CHAR=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.decls()
            self.state = 103
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.decl()
                self.state = 106
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def vardecl_assign(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_assignContext,0)


        def vardecl_no_assign(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl_no_assignContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 115
                self.vardecl_assign()
                pass

            elif la_ == 2:
                self.state = 116
                self.vardecl_no_assign()
                pass


            self.state = 119
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_no_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_no_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_no_assign" ):
                return visitor.visitVardecl_no_assign(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_no_assign(self):

        localctx = MT22Parser.Vardecl_no_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl_no_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.idlist()
            self.state = 122
            self.match(MT22Parser.COLON)
            self.state = 123
            self.vartype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idlist)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(MT22Parser.ID)
                self.state = 126
                self.match(MT22Parser.COMMA)
                self.state = 127
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_assignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varlist(self):
            return self.getTypedRuleContext(MT22Parser.VarlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl_assign" ):
                return visitor.visitVardecl_assign(self)
            else:
                return visitor.visitChildren(self)




    def vardecl_assign(self):

        localctx = MT22Parser.Vardecl_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardecl_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.varlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def varlist(self):
            return self.getTypedRuleContext(MT22Parser.VarlistContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def vartype(self):
            return self.getTypedRuleContext(MT22Parser.VartypeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarlist" ):
                return visitor.visitVarlist(self)
            else:
                return visitor.visitChildren(self)




    def varlist(self):

        localctx = MT22Parser.VarlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varlist)
        try:
            self.state = 145
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(MT22Parser.ID)
                self.state = 134
                self.match(MT22Parser.COMMA)
                self.state = 135
                self.varlist()
                self.state = 136
                self.match(MT22Parser.COMMA)
                self.state = 137
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(MT22Parser.ID)
                self.state = 140
                self.match(MT22Parser.COLON)
                self.state = 141
                self.vartype()
                self.state = 142
                self.match(MT22Parser.ASSIGN)
                self.state = 143
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VartypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MT22Parser.PrimtypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vartype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVartype" ):
                return visitor.visitVartype(self)
            else:
                return visitor.visitChildren(self)




    def vartype(self):

        localctx = MT22Parser.VartypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vartype)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.primtype()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.arraytype()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcprototype(self):
            return self.getTypedRuleContext(MT22Parser.FuncprototypeContext,0)


        def funcbody(self):
            return self.getTypedRuleContext(MT22Parser.FuncbodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.funcprototype()
            self.state = 153
            self.funcbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncprototypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def functype(self):
            return self.getTypedRuleContext(MT22Parser.FunctypeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcprototype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncprototype" ):
                return visitor.visitFuncprototype(self)
            else:
                return visitor.visitChildren(self)




    def funcprototype(self):

        localctx = MT22Parser.FuncprototypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcprototype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(MT22Parser.ID)
            self.state = 156
            self.match(MT22Parser.COLON)
            self.state = 157
            self.match(MT22Parser.FUNCTION)
            self.state = 158
            self.functype()
            self.state = 159
            self.match(MT22Parser.LB)
            self.state = 160
            self.paramlist(0)
            self.state = 161
            self.match(MT22Parser.RB)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 162
                self.match(MT22Parser.INHERIT)
                self.state = 163
                self.match(MT22Parser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(MT22Parser.PrimtypeContext,0)


        def arraytype(self):
            return self.getTypedRuleContext(MT22Parser.ArraytypeContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_functype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctype" ):
                return visitor.visitFunctype(self)
            else:
                return visitor.visitChildren(self)




    def functype(self):

        localctx = MT22Parser.FunctypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functype)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.primtype()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.arraytype()
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 4)
                self.state = 169
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncbodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcbody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncbody" ):
                return visitor.visitFuncbody(self)
            else:
                return visitor.visitChildren(self)




    def funcbody(self):

        localctx = MT22Parser.FuncbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcbody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramdecl(self):
            return self.getTypedRuleContext(MT22Parser.ParamdeclContext,0)


        def paramlist(self):
            return self.getTypedRuleContext(MT22Parser.ParamlistContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)


